user_practice.txt
# Paste your interactive Python practice sesssion here
# See course site for details.
#
# Windows                 Mac
# CTRL A = select all = Command A
# CTRL C = copy =       Command C
# CTRL V = paste =      Command V

# It'll look something like this only longer:

Python 3.10.5 (main, Jul 22 2022, 17:09:35) [GCC 9.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> 2+2
4
>>> print("hello")
hello
>>> a = 5
>>> b = 3
>>> print( min (a, b))
3
>>> (base) C:\Users\Teacher>python
Python 3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> 45 + 72
117
>>> x = 7
>>> y = 3
>>> x + y
10
>>> total = x + y
>>> total
10
>>> type(x)
<class 'int'>
>>> type(10.5)
<class 'float'>
>>> 10.8 + 12.2 + .2
23.2
>>> total = 10.8 + 12.2 + .2
>>> total
23.2
>>> 7*4
28
>>> 2**10
1024
>>> 9**(1/2)
3.0
>>> 7/4
1.75
>>> 7//4
1
>>> 3//5
0
>>> 14//7
2
>>> -13/4
-3.25
>>> -13//4
-4
>>> 17%5
2
>>> 10*(5+3)
80
>>> 10*5+3
53
>>> 3*(4-5)
-3
>>> 3*4-5
7
>>> 4**3**2
262144
>>> (4**3)**2
4096
>>> 4**(3**2)
262144
>>> print("Welcome to Python")
Welcome to Python
>>> print('welcome','to','Python')
welcome to Python
>>> print('Welcome\nto\n\nPythong!')
Welcome
to

Pythong!
>>> print('Welcome\ntp\n\nPython!')
Welcome
tp

Python!
>>> print('This is a longer string, so we \
... : split it over two lines')
This is a longer string, so we : split it over two lines
>>> print('Sum is",7 + 3)
  File "<stdin>", line 1
    print('Sum is",7 + 3)
          ^
SyntaxError: unterminated string literal (detected at line 1)
>>> print('Sum is" , 7 + 3)
  File "<stdin>", line 1
    print('Sum is" , 7 + 3)
          ^
SyntaxError: unterminated string literal (detected at line 1)
>>> print('Sum is' , 7 + 3)
Sum is 10
>>> type('word')
<class 'str'>
>>> print('int(5.2)' , 'Truncates 5.2 to' , int(5.2))
int(5.2) Truncates 5.2 to 5
>>> print('Display "hi" in quotes')
Display "hi" in quotes
>>> triple_quotes_string = """This is a triple-quotes \
... String that spans two lines"""
>>> print(triple_quotes_string)
This is a triple-quotes String that spans two lines
>>> print("""This is a Lengthy /
... multiline string containing /
... a few lines /
... of text""")
This is a Lengthy /
multiline string containing /
a few lines /
of text
>>> print("""This is a lengthy \
... multiline string containing \
... a few lines \
... of text""")
This is a lengthy \
multiline string containing \
a few lines of text
>>> print( """practice \
... : practice""")
practice : practice
>>> name = input("What's your name? ")
What's your name? ashlee
>>> name
'ashlee'
>>> print(name)
ashlee
>>> Value1 = input('Enter First Number: ' )
Enter First Number: 7
>>> value2 = input('Enter Second Number: ')
Enter Second Number: 3
>>> Value1 + value2
'73'
>>> Value1 = int(Value1)
>>> value2 = int(value2)
>>> Value1 + value2
10
>>> float('6.2') * 3.3
20.46
>>>
print('Glad you came to the gym today to pump some iron! \n Today you will be doing bench press of 12 reps \n please enter the weights for your sets.')
Set1 = float(input('Enter weight for first set '))
Set2 = float(input('Enter weight for second set '))
Set3 = float(input('Enter weight for third set '))

TotalSet1 = round(Set1 * 12)
TotalSet2 = round(Set2 * 12)
TotalSet3 = round(Set3 * 12)

TotalWeight = TotalSet1 + TotalSet2 + TotalSet3
AverageWeight = round(TotalWeight / 3)
MinWeight = min(TotalSet1, TotalSet2, TotalSet3)
MaxWeight = max(TotalSet1, TotalSet2, TotalSet3)
RangeWeight = MaxWeight - MinWeight

print('Total weight lifted today: ', TotalWeight )
print('Average Weight lifted per set: ', AverageWeight )
print('The lease weight lifted in a set: ', MinWeight )
print('The most weight lifted in a set: ', MaxWeight)
print('The Range of the sets is: ', RangeWeight)

if TotalSet3 == TotalSet1:
    print('Your first set ', TotalSet1, 'is equal to your last set', TotalSet3, ' \n You need to work harder!')
if TotalSet3 <= TotalSet2:
    print('Your first set', TotalSet1, 'Was greater than your last set', TotalSet3, ' \n You need to work harder!')
if TotalSet3 >= TotalSet2:
    print('Your last set', TotalSet3, 'was Greater than you first set', TotalSet1, ' \n Great job! You are going to have insane gains soon!')

Today you will be doing bench press of 12 reps   
 please enter the weights for your sets.
Enter weight for first set 4
Enter weight for second set 3
Enter weight for third set 2
Total weight lifted today:  108
Average Weight lifted per set:  36
The lease weight lifted in a set:  24
The most weight lifted in a set:  48
The Range of the sets is:  24
Your first set 48 Was greater than your last set 24
 You need to work harder!